# envix-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  test-suite.yml
completion/: envix.schema.yml
schemas/: config.json
src/envix/: _helper.py  envname.py  exception.py  loader.py  path.py  types.py
src/envix/cli/: __main__.py  app.py  default.py  field.py
src/envix/cli/commands/: config.py  config_edit.py  config_list.py  config_schema.py  export.py  inject.py
src/envix/config/: __init__.py  config.py
src/envix/config/v1/: config.py  envix_v1.py
src/envix/config/v1/envs/: __init__.py  _common.py  bitwarden_envs_v1.py  file_envs_v1.py  google_cloud_secret_manager_envs_v1.py  local_envs_v1.py  raw_envs_v1.py
src/envix/loader/: __init__.py  v1_loader.py
tasks/: validate_config.py
tests/: config_builder.py  conftest.py  test_envix.py
tests/data/registered/: envix_includes_sample.yml  envix_sample.yml
tests/envix/cli/: test_app.py
tests/envix/cli/commands/: test_export.py  test_inject.py
tests/envix/loader/: test_v1_load.py
