[tool.poetry]
name = "envix"
version = "0.2.8"
description = "convinient secret manager."
authors = ["yassun7010 <yassun7010@outlook.com>"]
readme = "README.md"
packages = [{ include = "envix", from = "src" }]

[tool.poetry.scripts]
envix = "envix.cli.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
rich = "^13.7.1"
rich-argparse = "^1.4.0"
pyyaml = "^6.0.1"
google-cloud-secret-manager = "^2.19.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pyright = "^1.1.357"
ruff = ">=0.3.5,<0.9.0"
taskipy = "^1.12.2"
pytest-asyncio = "^0.24.0"

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check ."
typecheck = "pyright src/** tests/**"
schemacheck = "python tasks/validate_config.py"
test = "pytest"
ci = "task format && task lint && task typecheck && task schemacheck && task test"
schema = "envix config schema > schemas/config.json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
