[project]
name = "envix"
version = "0.2.8"
description = "convinient secret manager."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "yassun7010", email = "yassun7010@outlook.com" }]
dependencies = [
  "bitwarden-sdk>=0.1.0,<0.2.0",
  "google-cloud-secret-manager>=2.19.0,<3.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "rich-argparse>=1.4.0,<2.0.0",
  "rich>=13.7.1,<14.0.0",
]

[project.scripts]
envix = "envix.cli.__main__:main"

[dependency-groups]
dev = [
  "pyright",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "taskipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
ci = "task format && task lint && task typecheck && task schemacheck && task test"
format = "ruff format ."
lint = "ruff check ."
schema = "envix config schema > schemas/config.json"
schemacheck = "python tasks/validate_config.py"
test = "pytest"
typecheck = "pyright src/** tests/**"

[tool.uv.workspace]
members = ["aaa", "src/envix/aaa"]
